[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/player_icon.png.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://wallNode.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/Redkost Comic.otf" type="DynamicFontData" id=4]
[ext_resource path="res://imports/light.png" type="Texture" id=5]
[ext_resource path="res://imports/wing.wav" type="AudioStream" id=6]
[ext_resource path="res://imports/pointGot.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=4]
size = 24
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 9 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 152 )

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="RectangleShape2D" id=6]

[node name="world" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -320.0
margin_top = -184.0
margin_right = 320.0
margin_bottom = 184.0
color = Color( 0, 0.239216, 0.435294, 1 )

[node name="playerNode" type="Node2D" parent="."]

[node name="pointCounter" type="RichTextLabel" parent="playerNode"]
margin_left = -1.0
margin_top = -168.0
margin_right = 59.0
margin_bottom = -136.0
custom_fonts/normal_font = SubResource( 4 )
text = "0"
scroll_active = false

[node name="player" type="KinematicBody2D" parent="playerNode"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerNode/player"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="playerNode/player"]
texture = ExtResource( 1 )

[node name="detect" type="Area2D" parent="playerNode/player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerNode/player/detect"]
shape = SubResource( 2 )

[node name="resetter" type="Area2D" parent="playerNode/player"]
position = Vector2( -362, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerNode/player/resetter"]
shape = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="playerNode/player"]
texture = ExtResource( 5 )
texture_scale = 0.59
shadow_enabled = true

[node name="WingFlap" type="AudioStreamPlayer" parent="playerNode/player"]
stream = ExtResource( 6 )

[node name="pointGot" type="AudioStreamPlayer" parent="playerNode/player"]
stream = ExtResource( 7 )

[node name="wallNode" parent="." instance=ExtResource( 3 )]
position = Vector2( 343, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="wallNode2" parent="." instance=ExtResource( 3 )]
position = Vector2( 471, -32 )
__meta__ = {
"_edit_group_": true
}

[node name="wallNode3" parent="." instance=ExtResource( 3 )]
position = Vector2( 615, -8 )
__meta__ = {
"_edit_group_": true
}

[node name="wallNode4" parent="." instance=ExtResource( 3 )]
position = Vector2( 750, 32 )
__meta__ = {
"_edit_group_": true
}

[node name="wallNode5" parent="." instance=ExtResource( 3 )]
position = Vector2( 874, -64 )
__meta__ = {
"_edit_group_": true
}

[node name="wallNode6" parent="." instance=ExtResource( 3 )]
position = Vector2( 995, -40 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="deathUp" type="Area2D" parent="."]
position = Vector2( 0, -194 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="deathUp"]
shape = SubResource( 5 )

[node name="deathDown" type="Area2D" parent="."]
position = Vector2( 0, 194 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="deathDown"]
shape = SubResource( 6 )

[connection signal="area_entered" from="playerNode/player/detect" to="playerNode/player" method="_on_detect_area_entered"]
[connection signal="body_entered" from="playerNode/player/detect" to="playerNode/player" method="_on_detect_body_entered"]
[connection signal="body_entered" from="playerNode/player/resetter" to="playerNode/player" method="_on_resetter_body_entered"]
